feat: add domain events to ordering microservice
- Refactored Customer class to extend AbstractEventSourceEntity and publish CustomerRegisteredEvent and CustomerArchivedEvent.
- Introduced CustomerArchivedEvent and CustomerRegisteredEvent records for event handling.
- Updated Order class to extend AbstractEventSourceEntity and publish OrderPlacedEvent, OrderPaidEvent, OrderReadyEvent, and OrderCanceledEvent.
- Added corresponding event records for order events.
- Enhanced ShoppingCart class to extend AbstractEventSourceEntity and publish events for creation, item addition, removal, and emptying.
- Created ShoppingCartCreatedEvent, ShoppingCartEmptiedEvent, ShoppingCartItemAddedEvent, and ShoppingCartItemRemovedEvent records.
- Implemented event listeners for customer and order events, including CustomerEventListener and OrderEventListener.
- Added integration tests for event listeners to verify event handling and interactions with application services.
- Updated persistence entities to support event registration and handling.

Co-authored-by: Copilot <copilot@github.com>